fixes logo by decreasing z-index

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -17,6 +17,7 @@
 }
 
 #api__logo {
+    z-index: -5;
     position: fixed;
     bottom: 1rem;
     right: 2rem;
